# napari-nD-annotator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  annotator_module.py  bb_from_2_pts.py  bounding_box_example.py  hole_filling_example.py  interpolation_example.py  napari_test.py  new_pipeline_example.py  object_list_bb.py  pipeline_example.py  projections_example.py  pyproject.toml  requirements.txt  settings_template.py  setup.cfg  setup.py  slice_example.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test_and_deploy.yml  try_simpleitk.yml
.napari-hub/: DESCRIPTION.md
boundingbox/: __init__.py  _bounding_box.py  _bounding_box_constants.py  _bounding_box_list.py  _bounding_box_mouse_bindings.py  _bounding_box_utils.py  _bounding_boxes_key_bindings.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: napari_nd_annotator._widgets.AnnotatorWidget.rst  napari_nd_annotator._widgets.InterpolationWidget.rst  napari_nd_annotator._widgets.ListWidgetBB.rst  napari_nd_annotator._widgets.SliceDisplayWidget.rst  napari_nd_annotator._widgets.annotator_module.AnnotatorWidget.rst  napari_nd_annotator._widgets.annotator_module.InterpolationWidget.rst  napari_nd_annotator._widgets.annotator_module.Labels.rst  napari_nd_annotator._widgets.annotator_module.Layer.rst  napari_nd_annotator._widgets.annotator_module.QCheckBox.rst  napari_nd_annotator._widgets.annotator_module.QEvent.rst  napari_nd_annotator._widgets.annotator_module.QLabel.rst  napari_nd_annotator._widgets.annotator_module.QObject.rst  napari_nd_annotator._widgets.annotator_module.QTabWidget.rst  napari_nd_annotator._widgets.annotator_module.QVBoxLayout.rst  napari_nd_annotator._widgets.annotator_module.QWidget.rst  napari_nd_annotator._widgets.annotator_module.Viewer.rst  napari_nd_annotator._widgets.annotator_module.binary_fill_holes.rst  napari_nd_annotator._widgets.annotator_module.rst  (+74 more)
src/napari_nd_annotator/: __init__.py  _helper_functions.py  _napari_version.py  napari.yaml
widgets/: __init__.py  bounding_box_creator.py  contour_widget.py  interpolation_widget.py  object_extractor.py  object_list.py  projections.py
(+83 files in other folders)
