[metadata]
name = napari-nD-annotator
version = 0.2.0
author = David Bauer, Jozsef Molnar, Dominik Hirling
author_email = dbauer@brc.hu

license = BSD-3-Clause
description = A toolbox for annotating objects one by one in nD
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: C
	Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/bauerdavid/napari-nD-annotator/issues
    Documentation = https://github.com/bauerdavid/napari-nD-annotator/blob/main/README.md
    Source Code = https://github.com/bauerdavid/napari-nD-annotator
    User Support = https://github.com/bauerdavid/napari-nD-annotator/issues


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy
    opencv-python
    matplotlib
    napari>=0.4.11
    scikit-image>=0.19
    SimpleITK
[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    numpy
bbox =
    napari-bbox
ms =
    minimal-surface
all =
    %(bbox)s
    %(ms)s


[options.packages.find]
where = src

[options.package_data]
napari_nd_annotator = *.yaml
* =
    *.pyx
    *.pxd
    Eikonal.*
    commontype.h

[options.entry_points]
napari.manifest =
    napari-nD-annotator = napari_nd_annotator:napari.yaml
